<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#84BAEA"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_shopping"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_shopping_cart_checkout_24"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_search"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_search_24"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_shopping"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_product_details"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_product"
        app:layout_constraintTop_toBottomOf="@id/toolBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_Image"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_product_details"
        tools:itemCount="5"
        tools:listitem="@layout/item_product_image" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_product_long_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:maxLines="2"
        android:text="@string/product_long_details"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/recyclerview_Image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_rating_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#4E8E17"
        android:drawableEnd="@drawable/ic_star_24"
        android:paddingHorizontal="5dp"
        android:text="@string/str_4_1"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/tv_product_long_details"
        app:layout_constraintTop_toBottomOf="@id/tv_product_long_details" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_details_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/_15_reviews"
        app:layout_constraintBottom_toBottomOf="@id/tv_rating_details"
        app:layout_constraintStart_toEndOf="@id/tv_rating_details"
        app:layout_constraintTop_toTopOf="@id/tv_rating_details" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="@id/tv_rating_details"
        app:layout_constraintTop_toBottomOf="@id/tv_rating_details" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_price_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/_24_000"
        android:textColor="#D82C2C"
        app:layout_constraintStart_toEndOf="@id/tv_price"
        app:layout_constraintTop_toBottomOf="@id/tv_rating_details" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_mrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/mrp"
        app:layout_constraintStart_toStartOf="@id/tv_price"
        app:layout_constraintTop_toBottomOf="@id/tv_price" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_mrp_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/_31_000"
        app:layout_constraintStart_toEndOf="@id/tv_mrp"
        app:layout_constraintTop_toBottomOf="@id/tv_price_details" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_you_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/you_save"
        app:layout_constraintStart_toStartOf="@id/tv_price"
        app:layout_constraintTop_toBottomOf="@id/tv_mrp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_you_save_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/_600_22"
        android:textColor="#D82C2C"
        app:layout_constraintStart_toEndOf="@id/tv_you_save"
        app:layout_constraintTop_toBottomOf="@id/tv_mrp_details" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="#198323"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
