<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MyCartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#84BAEA"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back_my_cart"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/my_cart"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@id/img_back_my_cart"
                app:layout_constraintStart_toEndOf="@id/img_back_my_cart"
                app:layout_constraintTop_toTopOf="@id/img_back_my_cart" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_basket_sub_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/basket_subtotal"
        android:textAllCaps="true"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_total_item_count_my_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_items"
        android:textColor="#0C7BDA"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_basket_sub_total"
        app:layout_constraintStart_toEndOf="@id/tv_basket_sub_total"
        app:layout_constraintTop_toTopOf="@id/tv_basket_sub_total" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sar_2450"
        android:textColor="#E60202"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_basket_sub_total"
        app:layout_constraintStart_toEndOf="@id/tv_total_item_count_my_cart"
        app:layout_constraintTop_toTopOf="@id/tv_basket_sub_total" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_proceed_to_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp"
        android:background="#499538"
        android:text="@string/proceed_to_checkout"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_basket_sub_total" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_proceed_to_checkout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_cart_recyclerview"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_my_cart" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>