<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_constraint_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#4E8E17"
                android:drawableEnd="@drawable/ic_star_24"
                android:paddingHorizontal="5dp"
                android:text="@string/str_4_1"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/item_constraint_ll"
                app:layout_constraintTop_toTopOf="@id/item_constraint_ll" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_discount"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="#4E8E17"
                android:maxLines="2"
                android:paddingHorizontal="5dp"
                android:text="@string/str_discount"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/item_constraint_ll"
                app:layout_constraintTop_toTopOf="@id/item_constraint_ll" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_product"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:scaleType="centerCrop"
                android:background="@color/white"
                android:src="@drawable/ic_product"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/item_constraint_ll" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_product_name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:maxLines="2"
                android:text="@string/str_product_name"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/item_constraint_ll"
                app:layout_constraintStart_toStartOf="@id/item_constraint_ll"
                app:layout_constraintTop_toBottomOf="@id/img_product" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_final_prize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/sar_2450"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/item_constraint_ll"
                app:layout_constraintStart_toStartOf="@id/item_constraint_ll"
                app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_retail_prize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/sar_2450"
                app:layout_constraintBottom_toBottomOf="@id/item_constraint_ll"
                app:layout_constraintStart_toEndOf="@id/tv_final_prize"
                app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="#5996DF"
                android:text="@string/add"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/tv_final_prize"
                app:layout_constraintEnd_toEndOf="@id/item_constraint_ll"
                app:layout_constraintTop_toTopOf="@id/tv_final_prize" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>